[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["simd"]
simd = []

[dependencies]
image = "0.25.6"
indicatif = { version = "0.17.11", features = ["rayon"] }
rand = "0.9.0"
rayon = "1.10.0"
